--- a/app/src/main/res/layout/account_authentication.xml
+++ b/app/src/main/res/layout/account_authentication.xml
@@ -70,18 +70,18 @@
                 android:id="@+id/logoImageView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginTop="32dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/agedcare_icon"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/enterPinText" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/enterPinText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
+                android:layout_marginTop="16dp"
                 android:text="Verification Code"
                 android:textColor="@color/black"
                 android:textSize="18sp"
@@ -117,43 +117,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/checkEmailText">
 
-
-                <EditText
-                    android:id="@+id/pin_digit_2"
-                style="@style/poppinsfontstyle"
-                />
-
-                <EditText
-                    android:id="@+id/pin_digit_3"
-                    android:fontFamily="@font/poppins"
-                    />
-
-                <EditText
-                    android:id="@+id/pin_digit_4"
-                    style="@style/poppinsfontstyle"
-                    />
-
-                <EditText
-                    android:id="@+id/pin_digit_5"
-                    android:fontFamily="@font/poppins"
-                    />
-
-                <EditText
-                    android:id="@+id/pin_digit_6"
-                    android:fontFamily="@font/poppins"
-                    />
-
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/pinCodeLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/checkEmailText">
-
                 <EditText
                     android:id="@+id/pin_digit_1"
                     android:layout_width="50dp"
@@ -178,7 +141,7 @@
 
                 <EditText
                     android:id="@+id/pin_digit_3"
-                    android:layout_width="50dp"
+                    android:layout_width="55dp"
                     android:layout_height="50dp"
                     android:layout_margin="4dp"
                     android:background="@drawable/edit_text_border"
