--- a/app/src/main/res/layout/account_creation.xml
+++ b/app/src/main/res/layout/account_creation.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Account Creation"
+                android:text="@string/account_creation"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -59,24 +59,39 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
             android:padding="16dp"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="46dp">
+
+            <ImageView
+                android:id="@+id/logoImageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/agedcare_icon"
+                tools:layout_editor_absoluteY="16dp" />
 
             <EditText
                 android:id="@+id/Fullname"
                 style="@style/Widget.AppCompat.EditText"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
+                android:paddingHorizontal="16dp"
+                android:layout_marginBottom="12dp"
                 android:layout_gravity="center_horizontal"
                 android:autofillHints=""
                 android:background="@drawable/edit_text_border"
                 android:ems="10"
                 android:focusable="auto"
-                android:hint="Full Name"
+                android:hint="@string/full_name"
                 android:inputType="textPersonName"
                 android:textColor="@android:color/darker_gray"
                 tools:layout_editor_absoluteX="37dp"
@@ -86,12 +101,14 @@
                 android:id="@+id/Username"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
+                android:paddingHorizontal="16dp"
+                android:layout_marginBottom="12dp"
                 android:layout_gravity="center_horizontal"
                 android:autofillHints=""
                 android:background="@drawable/edit_text_border"
                 android:ems="10"
                 android:focusable="auto"
-                android:hint="Username (unique)"
+                android:hint="@string/username_unique"
                 android:inputType="textEmailAddress"
                 android:textColor="@android:color/darker_gray"
                 android:textStyle="normal"
@@ -102,106 +119,74 @@
                 android:id="@+id/Email"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
+                android:paddingHorizontal="16dp"
+                android:layout_marginBottom="12dp"
                 android:layout_gravity="center_horizontal"
                 android:autofillHints=""
                 android:background="@drawable/edit_text_border"
                 android:ems="10"
                 android:focusable="auto"
-                android:hint="Email address (unique)"
+                android:hint="@string/email_address_unique"
                 android:inputType="textEmailAddress"
                 android:textColor="@android:color/darker_gray"
                 android:textStyle="normal"
                 tools:layout_editor_absoluteX="36dp"
                 tools:layout_editor_absoluteY="217dp" />
-
-            <EditText
-                android:id="@+id/ConfirmPassword"
+        <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center_horizontal"
-                android:autofillHints=""
-                android:background="@drawable/edit_text_border"
-                android:ems="10"
-                android:focusable="auto"
-                android:hint="Confirm Password"
-                android:inputType="textEmailAddress"
-                android:textColor="@android:color/darker_gray"
-                android:textStyle="normal"
-                tools:layout_editor_absoluteX="36dp"
-                tools:layout_editor_absoluteY="313dp" />
+                android:layout_height="wrap_content"
+                app:passwordToggleEnabled="true">
 
             <EditText
                 android:id="@+id/Password"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
+                android:layout_marginBottom="12dp"
                 android:layout_gravity="center_horizontal"
                 android:autofillHints=""
                 android:background="@drawable/edit_text_border"
                 android:ems="10"
                 android:focusable="auto"
-                android:hint="Password"
-                android:inputType="textEmailAddress"
+                android:hint="@string/password"
+                android:inputType="textPassword"
                 android:textColor="@android:color/darker_gray"
                 android:textStyle="normal"
                 tools:layout_editor_absoluteX="36dp"
                 tools:layout_editor_absoluteY="265dp" />
 
-            <ImageView
-                android:id="@+id/logoImageView"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@drawable/agedcare_icon"
-                tools:layout_editor_absoluteY="16dp" />
+</com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
-                android:id="@+id/pinCodeLayout"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="290dp"/>
-            <LinearLayout
-                android:id="@+id/passwordLayout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/Email"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="16dp">
-
-
-            <ImageView
-                android:id="@+id/passwordVisibilityToggle"
-                android:layout_width="40dp"
+                app:passwordToggleEnabled="true">
+            <EditText
+                android:id="@+id/ConfirmPassword"
+                android:layout_width="300dp"
                 android:layout_height="40dp"
-                android:contentDescription="Toggle password visibility"
-                android:padding="8dp"
-                android:src="@drawable/eye_off"
-                tools:layout_editor_absoluteX="278dp"
-                tools:layout_editor_absoluteY="265dp" />
-
-            <ImageView
-                android:id="@+id/passwordVisibilityToggle"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:contentDescription="Toggle password visibility"
-                android:padding="8dp"
-                android:src="@drawable/eye_off"
-                tools:layout_editor_absoluteX="281dp"
+                android:layout_marginBottom="12dp"
+                android:layout_gravity="center_horizontal"
+                android:autofillHints=""
+                android:background="@drawable/edit_text_border"
+                android:ems="10"
+                android:focusable="auto"
+                android:hint="@string/confirm_password"
+                android:inputType="textPassword"
+                android:textColor="@android:color/darker_gray"
+                android:textStyle="normal"
+                tools:layout_editor_absoluteX="36dp"
                 tools:layout_editor_absoluteY="313dp" />
 
+            </com.google.android.material.textfield.TextInputLayout>
+
+
             <Button
-                android:id="@+id/loginBtn"
+                android:id="@+id/createAccountBtn"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Create Account"
+                android:text="@string/create_account"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:cornerRadius="24dp"
@@ -213,10 +198,10 @@
             <Button
                 android:id="@+id/loginBtn"
                 android:layout_width="200dp"
-                android:layout_height="5dp0dp"
+                android:layout_height="50dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Back to Login"
+                android:text="@string/back_to_login"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:cornerRadius="24dp"
@@ -235,7 +220,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 tools:layout_editor_absoluteY="527dp" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
 
     <ImageView
