--- a/app/src/main/res/layout/login_enter_pin.xml
+++ b/app/src/main/res/layout/login_enter_pin.xml
@@ -69,9 +69,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Enter PIN code"
+                android:text="@string/enter_pin_code"
                 android:textColor="@color/black"
                 android:textSize="18sp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:paddingVertical="64dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="Please check your email for the code."
+                android:text="@string/please_check_your_email_for_the_code"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -90,38 +92,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/enterPinText" />
 
-            <LinearLayout
-                android:id="@+id/pinCodeLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/checkEmailText">
-
-                <EditText
-                    android:id="@+id/pin_digit_1" />
-
-                <EditText
-                    android:id="@+id/pin_digit_2" />
-
-                <EditText
-                    android:id="@+id/pin_digit_3" />
-
-                <EditText
-                    android:id="@+id/pin_digit_4"
-                    style="@style/PinCodeEditText" />
-
-                <EditText
-                    android:id="@+id/pin_digit_5"
-                    style="@style/PinCodeEditText" />
-
-                <EditText
-                    android:id="@+id/pin_digit_6"
-                    style="@style/PinCodeEditText" />
-
-            </LinearLayout>
             <LinearLayout
                 android:id="@+id/pinCodeLayout"
                 android:layout_width="wrap_content"
@@ -205,7 +175,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="This code is valid for the next 30 seconds. A new code will be generated when it expires."
+                android:text="@string/this_code_is_valid_for_the_next_30_seconds_a_new_code_will_be_generated_when_it_expires"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="12sp"
@@ -221,7 +191,7 @@
                 android:layout_marginTop="36dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Submit"
+                android:text="@string/submit"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:cornerRadius="24dp"
@@ -235,23 +205,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="Resend"
+                android:text="@string/resend"
                 android:textColor="@color/TG_blue"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/loginBtn" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:visibility="invisible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/resendText" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
