--- a/app/src/main/res/layout/account_creation.xml
+++ b/app/src/main/res/layout/account_creation.xml
@@ -138,7 +138,7 @@
                 app:passwordToggleEnabled="true">
 
             <EditText
-                android:id="@+id/Password"
+                android:id="@+id/password"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="12dp"
@@ -161,7 +161,7 @@
                 android:layout_height="wrap_content"
                 app:passwordToggleEnabled="true">
             <EditText
-                android:id="@+id/ConfirmPassword"
+                android:id="@+id/passwordConfirm"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="12dp"
@@ -181,7 +181,7 @@
 
 
             <Button
-                android:id="@+id/createAccountBtn"
+                android:id="@+id/registerBtn"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:backgroundTint="@color/TG_blue"
@@ -196,7 +196,7 @@
                 tools:layout_editor_absoluteY="372dp" />
 
             <Button
-                android:id="@+id/loginBtn"
+                android:id="@+id/backToLoginButton"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:backgroundTint="@color/TG_blue"
