--- a/app/src/main/res/layout/blood_pressure_visualisation_current.xml
+++ b/app/src/main/res/layout/blood_pressure_visualisation_current.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Blood Pressure"
+                android:text="@string/blood_pressure"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -65,7 +65,7 @@
             android:id="@+id/radio_current"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Current"
+            android:text="@string/current"
             android:textSize="16sp"
             android:textColor="@color/black" />
 
@@ -73,7 +73,7 @@
             android:id="@+id/radio_daily"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Daily"
+            android:text="@string/daily"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginStart="24dp" />
@@ -82,7 +82,7 @@
             android:id="@+id/radio_last_15_days"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Last 15 days"
+            android:text="@string/last_15_days"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:layout_marginStart="24dp" />
@@ -110,7 +110,7 @@
                 android:id="@+id/bloodPressureTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Blood Pressure"
+                android:text="@string/blood_pressure"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -125,7 +125,7 @@
                 android:id="@+id/bloodPressureValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="128/85 bpm"
+                android:text="@string/blood_pressure_current"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 app:layout_constraintTop_toBottomOf="@+id/bloodPressureTitle"
@@ -161,7 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
-                android:text="Blood Pressure tip 1"
+                android:text="@string/blood_pressure_tip"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -198,7 +198,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:gravity="center"
-                android:text="Blood Pressure tip 2"
+                android:text="@string/blood_pressure_tip"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -210,41 +210,6 @@
     </androidx.cardview.widget.CardView>
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/bloodPressureTip3Card"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:cardCornerRadius="16dp"
-        app:cardBackgroundColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bloodPressureTip2Card"
-        app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintVertical_bias="0.4"
-        app:layout_constraintWidth_percent="0.92"
-        app:cardElevation="8dp"
-        android:layout_marginTop="15dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/bloodPressureTip3Text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="Blood Pressure tip 3"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintVertical_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
