--- a/app/src/main/res/layout/blood_pressure_visualisation_current.xml
+++ b/app/src/main/res/layout/blood_pressure_visualisation_current.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:layout_marginTop="54dp"
-                android:contentDescription="TODO"
+                android:contentDescription="@string/content_description_gopher_logo"
                 app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
