--- a/app/src/main/res/layout/activity_caretaker_dashboard.xml
+++ b/app/src/main/res/layout/activity_caretaker_dashboard.xml
@@ -80,7 +80,7 @@
             android:id="@+id/selectAPatientTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="75dp"
             android:onClick="onSelectAPatientClick"
             android:text="@string/select_a_patient"
             android:textColor="#2B86AC"
@@ -89,6 +89,20 @@
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+3
+    <TextView
+        android:id="@+id/monitorPatientTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:onClick="onMonitorPatientClick"
+        android:text="@string/monitor_patient"
+        android:textColor="#2B86AC"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selectAPatientTextView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
