--- a/app/src/main/res/layout/activity_homepage4caretaker.xml
+++ b/app/src/main/res/layout/activity_homepage4caretaker.xml
@@ -9,64 +9,65 @@
         tools:layout_editor_absoluteY="-108dp"
         android:background="@color/off_white">
 
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/settingsButton3"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="224dp"
-        android:layout_marginTop="88dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView"
+        android:layout_marginTop="16dp"
+        android:elevation="20dp"
+        android:fontFamily="@font/poppins_bold"
+        android:gravity="center"
+        android:paddingTop="20dp"
+        android:paddingBottom="16dp"
+        android:stateListAnimator="@animator/button_state_list_animator"
+        android:text="@string/settings"
+        android:textColor="@color/white"
+        android:textSize="11sp"
+        app:backgroundTint="@color/deep_blue"
+        app:cornerRadius="16dp"
         app:icon="@drawable/menu_settings"
         app:iconGravity="top"
         app:iconPadding="10dp"
         app:iconSize="42dp"
-        app:cornerRadius="16dp"
-        android:elevation="20dp"
-        android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/deep_blue"
-        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-        android:text="@string/settings"
-        android:textColor="@color/white"
-        android:fontFamily="@font/poppins_bold"
-        android:textSize="11sp"
-        android:paddingTop="20dp"
-        android:paddingBottom="16dp"
-        android:gravity="center" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/patientListButton"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="88dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="16dp"
+        android:elevation="20dp"
+        android:fontFamily="@font/poppins_bold"
+        android:gravity="center"
+        android:paddingTop="20dp"
+        android:paddingBottom="16dp"
+        android:stateListAnimator="@animator/button_state_list_animator"
+        android:text="@string/patient_list"
+        android:textColor="@color/off_white"
+        android:textSize="11sp"
+        app:backgroundTint="@color/deep_blue"
+        app:cornerRadius="16dp"
         app:icon="@drawable/patient_list_icon"
         app:iconGravity="top"
         app:iconPadding="10dp"
         app:iconSize="42dp"
-        app:cornerRadius="16dp"
-        android:elevation="20dp"
-        android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/deep_blue"
         app:iconTint="@color/off_white"
-        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-        android:text="@string/patient_list"
-        android:textColor="@color/off_white"
-        android:fontFamily="@font/poppins_bold"
-        android:textSize="11sp"
-        android:paddingTop="20dp"
-        android:paddingBottom="16dp"
-        android:gravity="center" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/taskListButton"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="156dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
@@ -86,13 +87,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sighOutButton"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="224dp"
-        android:layout_marginTop="388dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="424dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
@@ -117,8 +119,8 @@
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="388dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="292dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
@@ -139,38 +141,57 @@
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView"
         tools:ignore="RtlSymmetry" />
 
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/caretaker_profile"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="224dp"
-        android:layout_marginTop="240dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView"
+        android:layout_marginTop="292dp"
+        android:elevation="20dp"
+        android:fontFamily="@font/poppins_bold"
+        android:gravity="center"
+        android:paddingStart="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="16dp"
+        android:stateListAnimator="@animator/button_state_list_animator"
+        android:text="@string/profile"
+        android:textColor="@color/white"
+        android:textSize="11sp"
+        app:backgroundTint="@color/deep_blue"
+        app:cornerRadius="16dp"
         app:icon="@drawable/profile_user"
         app:iconGravity="top"
         app:iconPadding="10dp"
         app:iconSize="40dp"
-        app:cornerRadius="16dp"
-        android:elevation="20dp"
-        android:stateListAnimator="@animator/button_state_list_animator"
-        app:backgroundTint="@color/deep_blue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/caretaker_monitor"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-        android:text="@string/profile"
-        android:textColor="@color/white"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="224dp"
+        android:layout_marginTop="156dp"
+        android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
-        android:textSize="11sp"
+        android:gravity="center"
+        android:paddingStart="20dp"
         android:paddingTop="20dp"
         android:paddingBottom="16dp"
-        android:paddingStart="20dp"
-        android:gravity="center" />
-
-
-
-
-
-
+        android:stateListAnimator="@animator/button_state_list_animator"
+        android:text="@string/profile"
+        android:textColor="@color/white"
+        android:textSize="11sp"
+        app:backgroundTint="@color/deep_blue"
+        app:cornerRadius="16dp"
+        app:icon="@drawable/profile_user"
+        app:iconGravity="top"
+        app:iconPadding="10dp"
+        app:iconSize="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <androidx.cardview.widget.CardView
             android:id="@+id/medicalDiaganosticsHeaderCardView"
